[tool.poetry]
name = "embedding-service"
version = "0.1.0"
description = "FastAPI server for sentence embeddings"
authors = ["Your Name <you@example.com>"]
package-mode = false

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sentence-transformers = "^2.2.2"
torch = {version = "^2.2.0", source = "pytorch"}
safetensors = "^0.4.1"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
